--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
   - redis
 before_script:
   - yarn add sequelize-cli
-  - psql -c 'CREATE database moz-pay_test;' -U postgres
+  - psql -c 'CREATE database moz_pay_test;' -U postgres
 script:
   - yarn test
 after_success:
