--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "index.js",
   "scripts": {
     "local": "./node_modules/.bin/sequelize db:migrate && ./node_modules/.bin/nodemon --exec babel-node src/index.js",
-    "test": "yarn droptables:test && yarn createtables:test  &&cross-env NODE_ENV=test yarn seed:test && cross-env NODE_ENV=test  mocha --require @babel/register --require babel-polyfill --timeout 200000 --exit ",
+    "test": "yarn droptables:test && yarn createtables:test  && yarn seed:test && cross-env NODE_ENV=test  mocha --require @babel/register --require babel-polyfill --timeout 200000 --exit ",
     "createtables:test": "cross-env NODE_ENV=test sequelize db:migrate",
     "droptables:test": "cross-env NODE_ENV=test sequelize db:migrate:undo:all",
     "seed:test": "./node_modules/.bin/sequelize db:seed --seed 20200719190121-test-profile ",
 
 
 
-    "coverage": "yarn droptables:test && yarn createtables:test  &&cross-env NODE_ENV=test yarn seed && cross-env NODE_ENV=test  nyc mocha --require @babel/register --require babel-polyfill --timeout 200000 --exit",
+    "coverage": "yarn droptables:test && yarn createtables:test  && yarn seed:test && cross-env NODE_ENV=test  nyc mocha --require @babel/register --require babel-polyfill --timeout 200000 --exit",
     "cov_on_html": "npx nyc report --reporter=html",
-    "seed": "./node_modules/.bin/sequelize db:seed:all",
+    "seed": "cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:seed:all",
     "start": "./node_modules/.bin/sequelize db:migrate && ./node_modules/.bin/nodemon --exec babel-node src/index.js"
   },
   "repository": {
