--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
 
 
-    "coverage": "yarn droptables:test && yarn createtables:test  && yarn seed:test && cross-env NODE_ENV=test  nyc mocha --require @babel/register --require babel-polyfill --timeout 200000 --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "cov_on_html": "npx nyc report --reporter=html",
     "seed": " ./node_modules/.bin/sequelize db:seed:all",
     "start": "./node_modules/.bin/sequelize db:migrate && ./node_modules/.bin/nodemon --exec babel-node src/index.js"
